<resources>
    <string name="app_name">蓝牙打印APP</string>
    <string name="connect_bluetooth">连接蓝牙打印机</string>
    <string name="connect">连接</string>
    <string name="print">打印</string>
    <string name="car_number">车号</string>
    <string name="tare_weight">皮重</string>
    <string name="square_weight">方量</string>
    <string name="net_weight">净重</string>
    <string name="gross_weight">毛重</string>
    <string name="time">时间</string>
    <string name="input_car_number">请输入车号</string>
    <string name="input_tare_weight">请输入皮重</string>
    <string name="input_square_weight">请输入方量</string>
    <string name="manage_car_tare">皮重管理</string>
    <string name="save">保存</string>
    <string name="delete">删除</string>
    <string name="cancel">取消</string>
    <string name="confirm">确认</string>
    <string name="add">添加</string>
    <string name="close">关闭</string>
    <string name="bluetooth_not_connected">未连接打印机</string>
    <string name="connecting">正在连接...</string>
    <string name="connected">已连接</string>
    <string name="disconnected">已断开</string>
    <string name="connect_failed">连接失败</string>
    <string name="select_printer">选择打印机</string>
    <string name="no_device">未找到蓝牙设备</string>
    <string name="print_success">打印成功</string>
    <string name="print_failed">打印失败</string>
    <string name="auto_tare">自动匹配皮重</string>
    <string name="manual_input">手动输入</string>
    <string name="print_history">打印历史</string>
    <string name="custom_coefficient">自定义系数</string>
</resources>
